Call "Terminate Service Worker" on all workers when all their clients are gone https://bugs.webkit.org/show_bug.cgi?id=179552

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-04
Reviewed by Chris Dumez.

Tested manually.

When SWServer detects that there is no longer any client for a given client origin,
it iterates through the running workers to terminate them if they have the given client origin.
A timer of 60 seconds is used in case a user closes a tab or a window, and reopens one with the same origin shortly after.

* workers/service/server/SWServer.cpp:
(WebCore::SWServer::findClientByIdentifier):
(WebCore::SWServer::matchAll):
(WebCore::SWServer::registerServiceWorkerClient):
(WebCore::SWServer::unregisterServiceWorkerClient):
* workers/service/server/SWServer.h:

Canonical link: https://commits.webkit.org/196330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225486 268f45cc-cd09-0410-ab3c-d52691b4dbfc